Bug 167990 - Pressing stop button not working
Summary: Pressing stop button not working
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-01 15:05 UTC by Patrick Boutilier
Modified: 2008-08-01 22:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Boutilier 2008-08-01 15:05:51 UTC
Version:           1.86 (using KDE 4.1.0)
Installed from:    Fedora RPMs
OS:                Linux

When a song or stream is playing and you click the stop button (or right click on tray icon and select stop) the song or stream stops playing for a second but then immediately starts playing again.
Comment 1 Lydia Pintscher 2008-08-01 15:36:22 UTC
probably related to bug 167750
Comment 2 Daniel Caleb Jones 2008-08-01 22:17:08 UTC
SVN commit 840784 by djones:

Fix the catastrophic damage I did to EngineController. Sorry about that. :(
Unfortunately, I had to give up making gapless work with streams.

BUG: 167990
BUG: 167898


 M  +64 -42    EngineController.cpp  
 M  +3 -0      EngineController.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=840784
Comment 3 Daniel Caleb Jones 2008-08-01 22:20:06 UTC
Since I couldn't reproduce this I'm not positive I fixed it.
Please reopen it if the problem still exists after updating.