Fix the catastrophic damage I did to EngineController. Sorry about that. :( Unfortunately, I had to give up making gapless work with streams.

BUG: 167990
BUG: 167898

svn path=/trunk/extragear/multimedia/amarok/; revision=840784